Fix spacing on mobile

--- a/static/scss/_custom.scss
+++ b/static/scss/_custom.scss
@@ -80,7 +80,11 @@
   border: none;
 
   padding-top: 0;
-  padding-bottom: 0;
+  padding-bottom: $global-padding;
+
+  @media screen and (min-width: 640px) {
+    padding-bottom: 0;
+  }
 }
 
 // Footer
